--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </ul>
         </header>
         <div class="content">
-          <h2>¡Tus pastelitos ideales!</h2>
+          <h2>¡Tus MiniDonas ideales!</h2>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti
             porro, labore voluptates quis illum, molestiae quam sint cum quos
@@ -49,13 +49,13 @@
             </a>
           </li>
         </ul>
-        <div class="credit">
+        <footer class="credit">
           creado por
           <a href="https://code-pro.netlify.app/" target="_blank">
             [ code : PRO ]
           </a>
           | todos los derechos reservados.
-        </div>
+        </footer>
       </div>
     </section>
   </body>
